--- a/.github/workflows/frontent_build.yml
+++ b/.github/workflows/frontent_build.yml
@@ -1,23 +1,25 @@
-name: SonarQube Cloud
+name: Frontend
 on:
   push:
     branches:
       - main
     paths:
       - 'frontend/**'
+      - '.github/workflows/**'
   pull_request:
     types: [opened, synchronize, reopened]
-    paths:
-      - 'frontend/**'
 jobs:
   sonarcloud:
-    name: SonarCloud
+    name: SonarQube Cloud
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
         with:
-          fetch-depth: 0 
-      - name: SonarCloud Scan
+          fetch-depth: 0
+      - name: SonarQube Cloud Scan
         uses: SonarSource/sonarcloud-github-action@master
+        with:
+          projectBaseDir: frontend
         env:
-          SONAR_TOKEN: ${{ secrets. SONARCLOUD_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_FRONTEND }}
